@@ -1,5 +1,5 @@
 /* i386_table.h --
- * Copyright 2005-08 Red Hat Inc., Durham, North Carolina.
+ * Copyright 2005-09 Red Hat Inc., Durham, North Carolina.
  * All Rights Reserved.
  *
  * This library is free software; you can redistribute it and/or
@@ -351,4 +351,8 @@ _S(329, "epoll_create1")
 _S(330, "dup3")
 _S(331, "pipe2")
 _S(332, "inotify_init1")
+_S(333, "preadv")
+_S(334, "pwritev")
+_S(335, "rt_tgsigqueueinfo")
+_S(336, "perf_counter_open")
 
