@@ -8,6 +8,7 @@
 - Make auparse handle empty AUSOURCE_FILE_ARRAY correctly (Miloslav Trmač)
 - Allow ausearch/report to specify multiple node names (Lenny Bruzenak)
 - Correct checking of != operator in audit_rule_fieldpair_data
+- Updated syscall table for 2.6.31 kernel
 
 1.7.13
 - Disable libev asserts unless --with-debug passed to configure
